add more ut
Signed-off-by: xinyual <xinyual@amazon.com>